Added css to header

--- a/index.html
+++ b/index.html
@@ -11,126 +11,128 @@
         <title>ProSko Nettbutikk</title>
     </head>
     <body>
-        <header>            
-            <nav>
-                <a href="index.html" id="logo">ProSko</a>
-                <div>
-                    <i id="meny" class="fa-solid fa-bars" style="color: #000000;"></i>
-                    <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                    <i class="fa-solid fa-user" style="color: #000000;"></i>
-                    <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
-                </div>
-                <ul class="navbar">
-                    <li><a href="index.html">ProSko</a></li>
-                    <li><a href="index.html">Close</a></li>
-                    <li><a href="produkt.html">Woman</a></li>
-                    <li><a href="produkt.html">Men</a></li>
-                    <li><a href="produkt.html">Children</a></li>
-                    <li><a href=#>Brands</a></li>
-                    <li><a href=#>Accessories</a></li>
-                    <li><a href="login.html">Customer club</a></li>
-                </ul>
-            </nav>
-            <img src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
-            <span class="overlapping-text">Tekst over bilde</span>
-            <button class="button">See our products &rarr;</button> 
         <div id="grid-container">
-        </header>
-        <main>
-            <section>
-                <h1>ProSko</h1>
-                <article>
-                    <h2><a href="produkt.html">Women</a></h2>
-                    <img src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
-                    <button class="button">See our products &rarr;</button> 
-                </article>
-                <article>
-                    <h2><a href="produkt.html">Men</a></h2>
-                    <img src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
-                    <button class="button">See our products &rarr;</button> 
-                </article>
-                <article>
-                    <h2><a href="produkt.html">Children</a></h2>
-                    <img src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
-                    <span class="overlapping-text">Tekst over bilde</span>
-                    <button class="button">See our products &rarr;</button> 
-                </article>
-            </section>
-            <section>
-                <h3>Brands</h3>
-                <ul class="brands">
-                    <li>
-                        <img src="img/adidas-311450_640.jpg" alt="Brand image">
-                    </li>
-                    <li>
-                        <img src="img/animal-2028258_640.jpg" alt="Brand image">
-                    </li>
-                    <li>
-                        <img src="img/black-307583_640.jpg" alt="Brand image">
-                    </li>
-                    <li>
-                        <img src="img/fire-303309_640.jpg" alt="Brand Image">
-                    </li>
-                    <li>
-                        <img src="img/silhouette-3313481_640.jpg" alt="Brand Image">
-                    </li>
-                    <li>
-                        <img src="img/w-2538524_640.jpg" alt="Brand image">
-                    </li>
-                </ul>
-            </section>
-            <section class="products">
-                <h2>Products</h2>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
-                    <h3>Black Velvet</h3>
-                    <p>Elegant and comfy women shoes</p>
-                    <p class="price">$39.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
-                    <h3>Merindo green</h3>
-                    <p>Bouncy running shoes</p>
-                    <p class="price">$29.99</p>
-                </article>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <h1>Prosko</h1>
-                <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
-                <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
-            </section>
-            <section>
-                <h3>About us</h3>
-                <ul>
-                    <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Follow us</h3>
-                <ul>
-                    <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Payment Methods</h3>
-                <ul>
-                    <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
-            <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
-        </footer>
+            <header>            
+                <nav>
+                    <div>
+                        <i id="meny" class="fa-solid fa-bars fa-xl" style="color: #000000;"></i>
+                        <i class="fa-solid fa-magnifying-glass fa-xl" style="color: #000000;"></i>
+                        <a class="logo" href="index.html" id="logo">ProSko</a>
+                        <a href="login.html"><i class="fa-solid fa-user fa-xl" style="color: #000000;"></i></a>
+                        <i class="fa-solid fa-cart-shopping fa-xl" style="color: #000000;"></i>
+                    </div>
+                    <ul class="navbar">
+                        <li><a href="index.html">ProSko</a></li>
+                        <li><a href="index.html">Close</a></li>
+                        <li><a href="produkt.html">Woman</a></li>
+                        <li><a href="produkt.html">Men</a></li>
+                        <li><a href="produkt.html">Children</a></li>
+                        <li><a href=#>Brands</a></li>
+                        <li><a href=#>Accessories</a></li>
+                        <li><a href="login.html">Customer club</a></li>
+                    </ul>
+                </nav>
+                <section>
+                    <img class="header-image" src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
+                    <span class="header-text">Tekst over bilde</span>
+                    <button class="header-button">See our products &rarr;</button> 
+                </section>
+            </header>
+            <main>
+                <section>
+                    <h1>ProSko</h1>
+                    <article>
+                        <h2><a href="produkt.html">Women</a></h2>
+                        <img src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
+                        <button class="button">See our products &rarr;</button> 
+                    </article>
+                    <article>
+                        <h2><a href="produkt.html">Men</a></h2>
+                        <img src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
+                        <button class="button">See our products &rarr;</button> 
+                    </article>
+                    <article>
+                        <h2><a href="produkt.html">Children</a></h2>
+                        <img src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
+                        <span class="overlapping-text">Tekst over bilde</span>
+                        <button class="button">See our products &rarr;</button> 
+                    </article>
+                </section>
+                <section>
+                    <h3>Brands</h3>
+                    <ul class="brands">
+                        <li>
+                            <img src="img/adidas-311450_640.jpg" alt="Brand image">
+                        </li>
+                        <li>
+                            <img src="img/animal-2028258_640.jpg" alt="Brand image">
+                        </li>
+                        <li>
+                            <img src="img/black-307583_640.jpg" alt="Brand image">
+                        </li>
+                        <li>
+                            <img src="img/fire-303309_640.jpg" alt="Brand Image">
+                        </li>
+                        <li>
+                            <img src="img/silhouette-3313481_640.jpg" alt="Brand Image">
+                        </li>
+                        <li>
+                            <img src="img/w-2538524_640.jpg" alt="Brand image">
+                        </li>
+                    </ul>
+                </section>
+                <section class="products">
+                    <h2>Products</h2>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Black Velvet</h3>
+                        <p>Elegant and comfy women shoes</p>
+                        <p class="price">$39.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Merindo green</h3>
+                        <p>Bouncy running shoes</p>
+                        <p class="price">$29.99</p>
+                    </article>
+                </section>
+            </main>
+            <footer>
+                <section>
+                    <h1>Prosko</h1>
+                    <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
+                    <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
+                </section>
+                <section>
+                    <h3>About us</h3>
+                    <ul>
+                        <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Payment Methods</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
+                <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+            </footer>
         </div>
         <script>
 
