--- a/produkt.html
+++ b/produkt.html
@@ -11,129 +11,131 @@
         <title>ProSko Products</title>
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html" id="logo">ProSko</a>
-                <div>
-                    <i id="meny" class="fa-solid fa-bars" style="color: #000000;"></i>
-                    <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                    <i class="fa-solid fa-user" style="color: #000000;"></i>
-                    <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
-                </div>
-                <ul class="navbar">
-                    <li><a href="index.html">ProSko</a></li>
-                    <li><a href="produkt.html">Close</a></li>
-                    <li><a href="produkt.html">Woman</a></li>
-                    <li><a href="produkt.html">Men</a></li>
-                    <li><a href="produkt.html">Children</a></li>
-                    <li><a href=#>Brands</a></li>
-                    <li><a href=#>Accessories</a></li>
-                    <li><a href="login.html">Customer club</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <nav class="breadcrumb">
-                <a href="index.html">Home</a>
-                <span> / </span>
-                <a href="produkt.html">Products</a>
-                <span> / </span>
-                <span>Shoes</span>
-            </nav>
-            <section class="products">
-                <h2>Products</h2>
-                <i class="fa-regular fa-filter" style="color: #ffffff;"></i>
-                <a href="#" class="square-button">Filter</a>
-                <a href="#" class="square-button">New &darr;</a>
-                <h3>All Products</h3>
-                <p>ProsSko offers a wide range of different shoes for every occasion. We have sports wear, dancing shoes, shoes for kids, men and women. We also offer pre used shoes for a low price.</p>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
-                    <h3>Black Velvet</h3>
-                    <p>Elegant and comfy women shoes</p>
-                    <p class="price">$39.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
-                    <h3>Merindo green</h3>
-                    <p>Bouncy running shoes</p>
-                    <p class="price">$29.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
-                    <h3>Black Velvet</h3>
-                    <p>Elegant and comfy women shoes</p>
-                    <p class="price">$39.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
-                    <h3>Merindo green</h3>
-                    <p>Bouncy running shoes</p>
-                    <p class="price">$29.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
-                    <h3>Black Velvet</h3>
-                    <p>Elegant and comfy women shoes</p>
-                    <p class="price">$39.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
-                    <h3>Merindo green</h3>
-                    <p>Bouncy running shoes</p>
-                    <p class="price">$29.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
-                    <h3>Black Velvet</h3>
-                    <p>Elegant and comfy women shoes</p>
-                    <p class="price">$39.99</p>
-                </article>
-                <article class="product-card">
-                    <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
-                    <h3>Merindo green</h3>
-                    <p>Bouncy running shoes</p>
-                    <p class="price">$29.99</p>
-                </article>
-                <a href="#" class="button"> More </a>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <h1>Prosko</h1>
-                <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
-                <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
-            </section>
-            <section>
-                <h3>About us</h3>
-                <ul>
-                    <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Follow us</h3>
-                <ul>
-                    <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Payment Methods</h3>
-                <ul>
-                    <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
-            <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
-        </footer>
+        <div id="grid-container">
+            <header>
+                <nav>
+                    <a href="index.html" id="logo">ProSko</a>
+                    <div>
+                        <i id="meny" class="fa-solid fa-bars" style="color: #000000;"></i>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <i class="fa-solid fa-user" style="color: #000000;"></i>
+                        <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
+                    </div>
+                    <ul class="navbar">
+                        <li><a href="index.html">ProSko</a></li>
+                        <li><a href="produkt.html">Close</a></li>
+                        <li><a href="produkt.html">Woman</a></li>
+                        <li><a href="produkt.html">Men</a></li>
+                        <li><a href="produkt.html">Children</a></li>
+                        <li><a href=#>Brands</a></li>
+                        <li><a href=#>Accessories</a></li>
+                        <li><a href="login.html">Customer club</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <nav class="breadcrumb">
+                    <a href="index.html">Home</a>
+                    <span> / </span>
+                    <a href="produkt.html">Products</a>
+                    <span> / </span>
+                    <span>Shoes</span>
+                </nav>
+                <section class="products">
+                    <h2>Products</h2>
+                    <i class="fa-regular fa-filter" style="color: #ffffff;"></i>
+                    <a href="#" class="square-button">Filter</a>
+                    <a href="#" class="square-button">New &darr;</a>
+                    <h3>All Products</h3>
+                    <p>ProsSko offers a wide range of different shoes for every occasion. We have sports wear, dancing shoes, shoes for kids, men and women. We also offer pre used shoes for a low price.</p>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-506826_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Black Velvet</h3>
+                        <p>Elegant and comfy women shoes</p>
+                        <p class="price">$39.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-629643_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Merindo Green</h3>
+                        <p>Bouncy running shoes</p>
+                        <p class="price">$29.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/childrens-shoes-687958_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Red label</h3>
+                        <p>Casual children shoes</p>
+                        <p class="price">$20.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/shoe-1768809_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Converse</h3>
+                        <p>Used Converse shoes</p>
+                        <p class="price">$9.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/trendest-studio-XZ3EmAIWuz0-unsplash.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>White Edge</h3>
+                        <p>Trendy white shoes</p>
+                        <p class="price">$39.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/womens-shoes-178163_640.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Gold Cat</h3>
+                        <p>Party shoes deluxe</p>
+                        <p class="price">$35.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/running-shoe-371624_640.jpg" alt="Product image of Black women shoes"></a>
+                        <h3>Running Wild</h3>
+                        <p>Comfy running shoes</p>
+                        <p class="price">$25.99</p>
+                    </article>
+                    <article class="product-card">
+                        <a href="produkt.html"><img src="img/hipkicks-HcqA34-uWo4-unsplash.jpg" alt="Product image of sports shoes"></a>
+                        <h3>Hip Kicks</h3>
+                        <p>Shoes for kicking</p>
+                        <p class="price">$29.99</p>
+                    </article>
+                    <a href="#" class="button"> More </a>
+                </section>
+            </main>
+            <footer>
+                <section>
+                    <h1>Prosko</h1>
+                    <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
+                    <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
+                </section>
+                <section>
+                    <h3>About us</h3>
+                    <ul>
+                        <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Payment Methods</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
+                <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+            </footer>
+        </div>
         <script>
 
             let x = document.querySelector(".navbar")
