--- a/login.html
+++ b/login.html
@@ -11,89 +11,91 @@
         <title>ProSko Login Site</title>
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html" id="logo">ProSko</a>
-                <div>
-                    <i id="meny" class="fa-solid fa-bars" style="color: #000000;"></i>
-                    <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                    <i class="fa-solid fa-user" style="color: #000000;"></i>
-                    <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
-                </div>
-                <ul class="navbar">
-                    <li><a href="index.html">ProSko</a></li>
-                    <li><a href="login.html">Close</a></li>
-                    <li><a href="produkt.html">Woman</a></li>
-                    <li><a href="produkt.html">Men</a></li>
-                    <li><a href="produkt.html">Children</a></li>
-                    <li><a href=#>Brands</a></li>
-                    <li><a href=#>Accessories</a></li>
-                    <li><a href="login.html">Customer club</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <form class="login-container">
-                <h1>Sign in</h1>
-                <p>New customer? <a href="#">Create Account</a></p>
-                <label for="Email">Email*</label>
-                <input type="text" placeholder="Email" name="Email" required>
-                <label for="Password">Password*</label>
-                <input type="password" placeholder="Password" name="Password" required>
-                <button type="submit">Login</button>
-                <p><a href="#">Forgot password?</a></p>
-                <p>Or log in with</p>
-            </form>
-            <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
-            <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
-            <section class="membership-benefits">
-                <h2>Membership benefits</h2>
-                <ul>
-                    <li><a href="#">Coupons & discounts<i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="#">Weekly newsletters<i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="#">Exclusive access to our podcast<i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="#">Design your own shoes<i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="#">Contests<i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><a href="#">Online courses<i class="fa-solid fa-arrow-right"></i></a></li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <h1>Prosko</h1>
-                <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
-                <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
-            </section>
-            <section>
-                <h3>About us</h3>
-                <ul>
-                    <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                    <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Follow us</h3>
-                <ul>
-                    <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <section>
-                <h3>Payment Methods</h3>
-                <ul>
-                    <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
-                </ul>
-            </section>
-            <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
-            <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
-        </footer>
+        <div id="grid-container">
+            <header>
+                <nav>
+                    <a href="index.html" id="logo">ProSko</a>
+                    <div>
+                        <i id="meny" class="fa-solid fa-bars" style="color: #000000;"></i>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <i class="fa-solid fa-user" style="color: #000000;"></i>
+                        <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
+                    </div>
+                    <ul class="navbar">
+                        <li><a href="index.html">ProSko</a></li>
+                        <li><a href="login.html">Close</a></li>
+                        <li><a href="produkt.html">Woman</a></li>
+                        <li><a href="produkt.html">Men</a></li>
+                        <li><a href="produkt.html">Children</a></li>
+                        <li><a href=#>Brands</a></li>
+                        <li><a href=#>Accessories</a></li>
+                        <li><a href="login.html">Customer club</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <form class="login-container">
+                    <h1>Sign in</h1>
+                    <p>New customer? <a href="#">Create Account</a></p>
+                    <label for="Email">Email*</label>
+                    <input type="text" placeholder="Email" name="Email" required>
+                    <label for="Password">Password*</label>
+                    <input type="password" placeholder="Password" name="Password" required>
+                    <button type="submit">Login</button>
+                    <p><a href="#">Forgot password?</a></p>
+                    <p>Or log in with</p>
+                </form>
+                <i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i>
+                <i class="fa-brands fa-google fa-2xl" style="color: #000000;"></i>
+                <section class="membership-benefits">
+                    <h2>Membership benefits</h2>
+                    <ul>
+                        <li><a href="#">Coupons & discounts<i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="#">Weekly newsletters<i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="#">Exclusive access to our podcast<i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="#">Design your own shoes<i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="#">Contests<i class="fa-solid fa-arrow-right"></i></a></li>
+                        <li><a href="#">Online courses<i class="fa-solid fa-arrow-right"></i></a></li>
+                    </ul>
+                </section>
+            </main>
+            <footer>
+                <section>
+                    <h1>Prosko</h1>
+                    <p>Welcome to our online store! ProSko is an e-commerce platform that specializes in footwear for people of all ages. Our mission is to offer a pair of shoes for every individual. We provide a diverse range of options, from premium brands like Bugatti and Timberland to more budget-friendly choices such as Adidas and Nike. Our selection is continually expanding, with new products being added regularly.</p>
+                    <p>In partnership with environmental organizations, we sell both new and used shoes to reduce our environmental footprint. Additionally, we package all our shoes in eco-friendly materials. At ProSko, we offer free shipping on orders over $100 and have a hassle-free return policy in case you're not satisfied with your purchase. Thank you for choosing ProSko for all your footwear needs!</p>
+                </section>
+                <section>
+                    <h3>About us</h3>
+                    <ul>
+                        <li><a href="#">Customer Club<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Privacy Policy<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Purchase Terms<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                        <li><a href="#">Frequently Asked Questions<i class="fa-solid fa-arrow-right" style="color: #000000;"></i></a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-twitter" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-instagram" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-facebook" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-tiktok" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Payment Methods</h3>
+                    <ul>
+                        <li><i class="fa-brands fa-paypal" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-stripe" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-visa" style="color: #000000;"></i></li>
+                        <li><i class="fa-brands fa-cc-mastercard" style="color: #000000;"></i></li>
+                    </ul>
+                </section>
+                <button class="cookies"><i class="fa-solid fa-cookie-bite fa-2xl" style="color: #000000;"></i></button>
+                <button class="contact"><i class="fa-solid fa-message fa-2xl" style="color: #000000;"></i></button>
+            </footer>
+        </div>
         <script>
 
             let x = document.querySelector(".navbar")
