Added css to frontpage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
-        <link href="css\font\fontawesome-free-6.4.2-web\css\fontawesome.css" rel="stylesheet">
-        <link href="css\font\fontawesome-free-6.4.2-web\css\brands.css" rel="stylesheet">
-        <link href="css\font\fontawesome-free-6.4.2-web\css\solid.css" rel="stylesheet">
+        <link href="css/font/fontawesome-free-6.4.2-web/css/fontawesome.css" rel="stylesheet">
+        <link href="css/font/fontawesome-free-6.4.2-web/css/brands.css" rel="stylesheet">
+        <link href="css/font/fontawesome-free-6.4.2-web/css/solid.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>ProSko Nettbutikk</title>
     </head>
@@ -34,28 +34,28 @@
                 </nav>
                 <section>
                     <img class="header-image" src="img/alexis-chloe-FcgxMCkjwEo-unsplash.jpg" alt="Image of a woman sitting on the ground with her legs crossed">
-                    <span class="header-text">Tekst over bilde</span>
-                    <button class="header-button">See our products &rarr;</button> 
+                    <span class="header-text">Welcome to ProSko</span>
+                    <a href="produkt.html" class="header-button">See our products &rarr;</a>
                 </section>
             </header>
             <main>
                 <section>
-                    <h1>ProSko</h1>
+                    <h4 class="welcome">Welcome to our online store</h4>
                     <article>
                         <h2><a href="produkt.html">Women</a></h2>
-                        <img src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
-                        <button class="button">See our products &rarr;</button> 
+                        <img class="women-img" src="img/franco-figueroa-bHrnn1h_5YY-unsplash.jpg" alt="Image category for women">
+                        <a href="produkt.html" class="women-button">See our products &rarr;</a>
                     </article>
                     <article>
                         <h2><a href="produkt.html">Men</a></h2>
-                        <img src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
-                        <button class="button">See our products &rarr;</button> 
+                        <img class="man-img" src="img/wieger-stienstra-t2LACMcVNgA-unsplash.jpg" alt="Image category for men">
+                        <a href="produkt.html" class="man-button">See our products &rarr;</a> 
                     </article>
                     <article>
                         <h2><a href="produkt.html">Children</a></h2>
-                        <img src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
-                        <span class="overlapping-text">Tekst over bilde</span>
-                        <button class="button">See our products &rarr;</button> 
+                        <img class="child-img" src="img/chris-hardy-1JHDnBniINE-unsplash.jpg" alt="Image category for kids">
+                        <span class="children-text">We have the new summer shoes!</span>
+                        <a href="produkt.html" class="children-button">Browse our products &rarr;</a> 
                     </article>
                 </section>
                 <section>
@@ -75,9 +75,6 @@
                         </li>
                         <li>
                             <img src="img/silhouette-3313481_640.jpg" alt="Brand Image">
-                        </li>
-                        <li>
-                            <img src="img/w-2538524_640.jpg" alt="Brand image">
                         </li>
                     </ul>
                 </section>
